--- a/okteto.yml
+++ b/okteto.yml
@@ -1,6 +1,7 @@
 build:
-  context: .
-  args:
-    URL: https://${OKTETO_NAMESPACE}.dev.helloheart.com/chief/
+  api:
+    context: .
+    args:
+      URL: https://${OKTETO_NAMESPACE}.dev.helloheart.com/chief/
 deploy:
   - echo $URL
